<resources>
    <string name="app_name">Ruházati webshop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="product_description">Termék leírás</string>
    <string name="guestlogin">Bejelentkezés vendégként</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>


    <string-array name="shopping_item_names">
        <item>Szürke pulóver</item>
        <item>Krémszínű pulóver</item>
        <item>Fehér szoknya</item>
        <item>Fekete nadrág</item>
        <item>Fekete szoknya</item>
        <item>Krémszínű nyári ruha</item>
        <item>Lila pulóver</item>
        <item>Lila nadrág</item>
        <item>Színes nadrág</item>
        <item>Piros nadrág</item>
        <item>Rózsás nyári ruha</item>
        <item>Rózsaszín baseball sapka</item>
        <item>Fehér nyári felső</item>
        <item>Virágos top</item>
        <item>Virágos ruha</item>

    </string-array>

    <string-array name="shopping_item_desc">
        <item>Kényelmes pulóver. Hossza kb. 60 cm-től (M. 36/38) kb. 70 cm-ig (M. 48/50), géppel mosható. </item>
        <item>Kényelmes pulóver. Hossza kb. 60 cm-től (M. 36/38) kb. 70 cm-ig (M. 48/50), géppel mosható.</item>
        <item>Sztreccs szoknya Lycrával fehér 4-zsebes fazonban, elasztikus anyagból. Hossza a 42-es méretben kb. 50 cm, géppel mosható.</item>
        <item>Bő nadrág. Klasszikus bő nadrág zsebekkel. Könnyed, bő szabásvonalú nadrág, kellemes szövött anyagból, oldalain divatos zsebekkel és részben gumis derékpánttal. Belső szárhossz a 38-as méretben kb. 75 cm, géppel mosható.</item>
        <item>Virágmintás szoknya fekete/mintás. Rövid, nyomott mintás szoknya. Hossza a 38-as méretben kb. 46 cm.</item>
        <item>Krémszínű nyári ruha</item>
        <item>Kényelmes pulóver. Hossza kb. 60 cm-től (M. 36/38) kb. 70 cm-ig (M. 48/50), géppel mosható.</item>
        <item>Bő nadrág. Klasszikus bő nadrág zsebekkel. Könnyed, bő szabásvonalú nadrág, kellemes szövött anyagból, oldalain divatos zsebekkel és részben gumis derékpánttal. Belső szárhossz a 38-as méretben kb. 75 cm, géppel mosható.</item>
        <item>Vékony twill nadrág, Ballon Fit fekete. Nyári nadrág különleges fazonban, kényelmes derékpánttal.</item>
        <item>Vékony és kényelmes alap sportnadrág oldalsó zsebekkel és puha anyagból. Ideális könnyed sportokhoz és edzésekhez. Gumis derékpánttal és zsinórbehúzóval a derekán, valamint oldalsó zsebekkel. Belső szárhossz a 40/42-es méretben kb. 77 cm, géppel mosható.</item>
        <item>Rózsás nyári ruha</item>
        <item>Rózsaszín baseball sapka</item>
        <item>Fehér nyári felső, kötött felsőrésszel. Hossza a 38-as méretben kb. 53 cm.</item>
        <item>Varázslatosan szép blúz fazonú top lefelé bővülő szabásvonallal és egyedi hátmegoldással. Hossza a 38-as méretben kb. 53 cm.</item>
        <item>Virágos ruha</item>

    </string-array>

    <array name="shopping_item_rates">
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>3.5</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>

    </array>

    <array name="shopping_item_images">
        <item>@drawable/szurke_pulover</item>
        <item>@drawable/barna_pulover</item>
        <item>@drawable/feherszoknya</item>
        <item>@drawable/feketenadrag</item>
        <item>@drawable/feketeszoknya</item>
        <item>@drawable/kremruha</item>
        <item>@drawable/lila_pulover</item>
        <item>@drawable/lilanadrag</item>
        <item>@drawable/nadrag1</item>
        <item>@drawable/pirosnadrag</item>
        <item>@drawable/rozsas</item>
        <item>@drawable/rozsaszinsapka</item>
        <item>@drawable/top2</item>
        <item>@drawable/viragos_top</item>
        <item>@drawable/viragosruha</item>
    </array>

    <array name="shopping_item_price">
        <item>5.990 Ft</item>
        <item>5.990 Ft</item>
        <item>3.599 Ft</item>
        <item>7.590 Ft</item>
        <item>3.599 Ft</item>
        <item>14.800 Ft</item>
        <item>5.990 Ft</item>
        <item>7.590 Ft</item>
        <item>6.990 Ft</item>
        <item>7.590 Ft</item>
        <item>16.900 Ft</item>
        <item>2.799 Ft</item>
        <item>3.200 Ft</item>
        <item>3.990 Ft</item>
        <item>17.990 Ft</item>

    </array>
</resources>